# astrojanitor

./: CMakeLists.txt  LICENSE  README
src/: cubicmap.c  cubicmap.h  main.c
